# palworldServ

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  conanfile.txt  palworldWebserver
cmake/: ClangTidy.cmake  Config.cmake  Doxygen.cmake  Sources.cmake
project/include/project/: main.hpp
project/src/: main.cpp
